--- a/about.html
+++ b/about.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__wrap container"><a class="logo" href="/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
+      <div class="header__wrap container"><a class="logo" href="/ers/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
           <p class="logo__name">торговый комплекс<strong>евроремонт</strong></p></a>
         <div class="menu__box">
-          <div class="menu__head"><span class="menu__head-text">Меню</span>
+          <div class="menu__head"><b class="menu__head-text">Меню</b>
             <button class="menu__close"></button>
           </div>
           <div class="header-nav">
-            <div class="header-nav__wrap"><a class="header-nav__link" href="/catalog.html">Каталог</a><a class="header-nav__link" href="">Торговые центры</a><a class="header-nav__link" href="">Компания</a><a class="header-nav__link -hidden" href="">Контакты</a><a class="header-nav__link -hidden" href="">Помощь</a>
+            <div class="header-nav__wrap"><a class="header-nav__link" href="/ers/catalog.html">Каталог</a><a class="header-nav__link" href="/ers/centers.html">Торговые центры</a><a class="header-nav__link" href="/ers/about.html">Компания</a><a class="header-nav__link -hidden" href="/ers/contacts.html">Контакты</a><a class="header-nav__link -hidden" href="/ers/help.html">Помощь</a>
             </div>
           </div>
           <table class="contacts-table">
@@ -33,7 +33,7 @@
                   <p class="phone">+7 (861) <span>275-09-92</span></p>
                 </td>
               </tr>
-              <tr>
+              <tr data-use="email">
                 <td><span>E-mail</span></td>
                 <td><span>info@evroremont-tk.ru</span></td>
               </tr>
@@ -54,7 +54,7 @@
             <p>+7 (861) <span>275-09-92</span></p>
           </div>
         </div>
-        <button class="menu__toggle" data-menu="no-active"><span></span></button>
+        <button class="menu__toggle"><span></span></button>
       </div>
     </header>
     <div class="page-head">
@@ -98,7 +98,7 @@
     <footer class="footer">
       <div class="footer__head">
         <div class="container">
-          <div class="footer__info"><a class="logo" href="/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
+          <div class="footer__info"><a class="logo" href="/ers/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
               <p class="logo__name">торговый комплекс<strong>евроремонт</strong></p></a>
             <p class="address">г. Краснодар, ул. Фрунзе,<br>д. 188/1, 4й этаж</p>
             <div class="phone-list">
