--- a/product-card.html
+++ b/product-card.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__wrap container"><a class="logo" href="/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
+      <div class="header__wrap container"><a class="logo" href="/ers/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
           <p class="logo__name">торговый комплекс<strong>евроремонт</strong></p></a>
         <div class="menu__box">
-          <div class="menu__head"><span class="menu__head-text">Меню</span>
+          <div class="menu__head"><b class="menu__head-text">Меню</b>
             <button class="menu__close"></button>
           </div>
           <div class="header-nav">
-            <div class="header-nav__wrap"><a class="header-nav__link" href="/catalog.html">Каталог</a><a class="header-nav__link" href="">Торговые центры</a><a class="header-nav__link" href="">Компания</a><a class="header-nav__link -hidden" href="">Контакты</a><a class="header-nav__link -hidden" href="">Помощь</a>
+            <div class="header-nav__wrap"><a class="header-nav__link" href="/ers/catalog.html">Каталог</a><a class="header-nav__link" href="/ers/centers.html">Торговые центры</a><a class="header-nav__link" href="/ers/about.html">Компания</a><a class="header-nav__link -hidden" href="/ers/contacts.html">Контакты</a><a class="header-nav__link -hidden" href="/ers/help.html">Помощь</a>
             </div>
           </div>
           <table class="contacts-table">
@@ -33,7 +33,7 @@
                   <p class="phone">+7 (861) <span>275-09-92</span></p>
                 </td>
               </tr>
-              <tr>
+              <tr data-use="email">
                 <td><span>E-mail</span></td>
                 <td><span>info@evroremont-tk.ru</span></td>
               </tr>
@@ -54,7 +54,7 @@
             <p>+7 (861) <span>275-09-92</span></p>
           </div>
         </div>
-        <button class="menu__toggle" data-menu="no-active"><span></span></button>
+        <button class="menu__toggle"><span></span></button>
       </div>
     </header>
     <div class="page-head">
@@ -149,7 +149,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -167,7 +167,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
                 <div class="product"><span class="lath">Свободен<br/>с 20.10.18</span>
                   <div class="product__img-box">
@@ -175,7 +175,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -193,7 +193,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
                 <div class="product">
                   <div class="product__img-box">
@@ -201,7 +201,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -219,7 +219,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
                 <div class="product">
                   <div class="product__img-box">
@@ -227,7 +227,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -245,7 +245,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
                 <div class="product">
                   <div class="product__img-box">
@@ -253,7 +253,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -271,7 +271,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
                 <div class="product"><span class="lath">Свободен<br/>с 20.10.18</span>
                   <div class="product__img-box">
@@ -279,7 +279,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -297,7 +297,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
                 <div class="product">
                   <div class="product__img-box">
@@ -305,7 +305,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -323,7 +323,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
                 <div class="product">
                   <div class="product__img-box">
@@ -331,7 +331,7 @@
                     <button class="product__img-control -prev"><span class="product__img-btn-icon"></span></button>
                     <button class="product__img-control -next"><span class="product__img-btn-icon"></span></button>
                   </div>
-                  <div class="product__info"><a class="product__name" href="/product-card.html">ТЦ Дверей и напольных покрытий</a>
+                  <div class="product__info"><a class="product__name" href="/ers/product-card.html">ТЦ Дверей и напольных покрытий</a>
                     <table class="product__table">
                       <tbody>
                         <tr>
@@ -349,7 +349,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="product__btn-box"><a class="btn" href="/product-card.html">Подробнее</a></div>
+                  <div class="product__btn-box"><a class="btn" href="/ers/product-card.html">Подробнее</a></div>
                 </div>
               </div>
             </div>
@@ -363,7 +363,7 @@
           <div class="thx__text">
             <h3>Спасибо.</h3>
             <p>Мы получили ваш запрос.<br>Наш менеджер позвонит Вам <br>в течении рабочего дня.</p>
-          </div><a class="btn to-home" href="/">На главную</a>
+          </div><a class="btn to-home" href="/ers/">На главную</a>
         </div>
       </div>
       <div class="communications popup-bg">
@@ -378,6 +378,7 @@
             </label>
             <button class="btn form__submit">Отправить</button>
             <div class="form-agreement">
+              <input class="form-agreement__input" type="checkbox" id="form-agreement" value="form-agreement">
               <label class="form-agreement__group" for="form-agreement">
                 <p>
                   Подтверждаю свое согласие на обработку 
@@ -385,7 +386,6 @@
                   в соответствии <a class="form-agreement__link" href="">с пользовательским соглашением</a>
                 </p>
               </label>
-              <input class="form-agreement__input" type="checkbox" id="form-agreement">
             </div>
           </form>
         </div>
@@ -411,7 +411,7 @@
     <footer class="footer">
       <div class="footer__head">
         <div class="container">
-          <div class="footer__info"><a class="logo" href="/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
+          <div class="footer__info"><a class="logo" href="/ers/"><img class="logo__image" src="assets/img/logo.svg" alt="logotype">
               <p class="logo__name">торговый комплекс<strong>евроремонт</strong></p></a>
             <p class="address">г. Краснодар, ул. Фрунзе,<br>д. 188/1, 4й этаж</p>
             <div class="phone-list">
